[gd_scene load_steps=7 format=3 uid="uid://cef18jyr72ni8"]

[ext_resource type="Texture2D" uid="uid://tsoxc08vbmom" path="res://art/icon.svg" id="1_0ansi"]
[ext_resource type="Script" path="res://towers/missile_tower/missile_tower.gd" id="1_v2k5x"]
[ext_resource type="PackedScene" uid="uid://l51do8sx5uap" path="res://towers/tower_menu.tscn" id="4_1b52b"]
[ext_resource type="PackedScene" uid="uid://o4hvytrvebhl" path="res://player/health_display.tscn" id="4_76p3g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5hmj"]
size = Vector2(32, 22)

[sub_resource type="CircleShape2D" id="CircleShape2D_ec7dw"]
radius = 125.0

[node name="MissileTower" type="StaticBody2D" node_paths=PackedStringArray("missie_launch_point", "enemy_detector", "health_display", "tower_menu")]
collision_layer = 3
script = ExtResource("1_v2k5x")
missie_launch_point = NodePath("MissileLaunchPoint")
enemy_detector = NodePath("EnemyDetector")
health_display = NodePath("HealthDisplay")
tower_menu = NodePath("TowerMenu")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.188235, 0.176471, 0.14902, 1)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_0ansi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_l5hmj")

[node name="MissileLaunchPoint" type="Node2D" parent="."]

[node name="HealthDisplay" parent="." instance=ExtResource("4_76p3g")]
offset_left = -13.0
offset_top = -25.0
offset_right = 125.0
offset_bottom = 17.0
scale = Vector2(0.19, 0.1)

[node name="TowerMenu" parent="." instance=ExtResource("4_1b52b")]

[node name="LoadTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource("CircleShape2D_ec7dw")

[connection signal="timeout" from="LoadTimer" to="." method="_on_load_timer_timeout"]
